added product list page

--- a/Flippy/Flippy.csproj
+++ b/Flippy/Flippy.csproj
@@ -51,15 +51,19 @@
 	  <None Remove="Resources\Fonts\Lato-Bold.ttf" />
 	  <None Remove="Resources\Fonts\Lato-Regular.ttf" />
 	  <None Remove="Resources\Images\apple.png" />
+	  <None Remove="Resources\Images\back_icon.svg" />
 	  <None Remove="Resources\Images\bell_icon.svg" />
 	  <None Remove="Resources\Images\beverage_icon.svg" />
 	  <None Remove="Resources\Images\cart_icon.svg" />
 	  <None Remove="Resources\Images\category_icon.svg" />
 	  <None Remove="Resources\Images\cauliflower.png" />
 	  <None Remove="Resources\Images\cucumber.png" />
+	  <None Remove="Resources\Images\filter_icon.svg" />
 	  <None Remove="Resources\Images\fruit_icon.svg" />
+	  <None Remove="Resources\Images\grape.png" />
 	  <None Remove="Resources\Images\grocery_icon.svg" />
 	  <None Remove="Resources\Images\hamburger_icon.svg" />
+	  <None Remove="Resources\Images\heart_full_icon.svg" />
 	  <None Remove="Resources\Images\heart_icon.svg" />
 	  <None Remove="Resources\Images\hide.svg" />
 	  <None Remove="Resources\Images\home_cart.png" />
@@ -75,7 +79,10 @@
 	  <None Remove="Resources\Images\shopper_bag.svg" />
 	  <None Remove="Resources\Images\shopper_cart.svg" />
 	  <None Remove="Resources\Images\shopper_pay.svg" />
+	  <None Remove="Resources\Images\tomato.png" />
+	  <None Remove="Resources\Images\top_down_arrow_icon.svg" />
 	  <None Remove="Resources\Images\vegetable_icon.svg" />
+	  <None Remove="Resources\Images\watermelon.png" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -95,6 +102,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\LoginPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\ProductListPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\ProfilePage.xaml">
