--- a/Flippy/Flippy.csproj
+++ b/Flippy/Flippy.csproj
@@ -86,6 +86,7 @@
 	  <None Remove="Resources\Images\profile_icon.svg" />
 	  <None Remove="Resources\Images\right_arrow.svg" />
 	  <None Remove="Resources\Images\search_icon.svg" />
+	  <None Remove="Resources\Images\send_icon.svg" />
 	  <None Remove="Resources\Images\shopper_bag.svg" />
 	  <None Remove="Resources\Images\shopper_cart.svg" />
 	  <None Remove="Resources\Images\shopper_pay.svg" />
@@ -98,6 +99,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Views\AddressFormPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\AddressPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
