added blog page

--- a/Flippy/Flippy.csproj
+++ b/Flippy/Flippy.csproj
@@ -108,6 +108,9 @@
 	  <MauiXaml Update="Views\AddressPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\BlogPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\CartPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
