--- a/Flippy/Flippy.csproj
+++ b/Flippy/Flippy.csproj
@@ -64,6 +64,7 @@
 	  <None Remove="Resources\Images\cart_icon.svg" />
 	  <None Remove="Resources\Images\category_icon.svg" />
 	  <None Remove="Resources\Images\cauliflower.png" />
+	  <None Remove="Resources\Images\cheese_icon.svg" />
 	  <None Remove="Resources\Images\cucumber.png" />
 	  <None Remove="Resources\Images\edit_icon.svg" />
 	  <None Remove="Resources\Images\filter_icon.svg" />
@@ -77,14 +78,18 @@
 	  <None Remove="Resources\Images\hide.svg" />
 	  <None Remove="Resources\Images\home_cart.png" />
 	  <None Remove="Resources\Images\home_icon.svg" />
+	  <None Remove="Resources\Images\ice_cream_icon.svg" />
+	  <None Remove="Resources\Images\liqour_icon.svg" />
 	  <None Remove="Resources\Images\logout_icon.svg" />
 	  <None Remove="Resources\Images\logo_dark.svg" />
 	  <None Remove="Resources\Images\logo_light.svg" />
+	  <None Remove="Resources\Images\meat_icon.svg" />
 	  <None Remove="Resources\Images\moon_icon.svg" />
 	  <None Remove="Resources\Images\mushroom.png" />
 	  <None Remove="Resources\Images\order_icon.svg" />
 	  <None Remove="Resources\Images\pawpaw.png" />
 	  <None Remove="Resources\Images\pear.png" />
+	  <None Remove="Resources\Images\pharmacy_icon.svg" />
 	  <None Remove="Resources\Images\profile_icon.svg" />
 	  <None Remove="Resources\Images\right_arrow.svg" />
 	  <None Remove="Resources\Images\search_close_icon.svg" />
